[project]
name = "ecomseek"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "fastapi>=0.115.6",
    "fastembed>=0.5.0",
    "qdrant-client>=1.12.2",
    "timm>=1.0.12",
    "transformers>=4.47.1",
]
